Fixed overflow

--- a/web/src/assets/styles/global.css
+++ b/web/src/assets/styles/global.css
@@ -36,6 +36,7 @@ body{
 #root{
     display: flex;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .app{
